--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -29,37 +29,276 @@ automatic-recover = false
 # set to true to not respect deadlines attached to payments
 ignore-deadlines = false
 
+[chain.ethereum]
+chain-name = "Ethereum"
+chain-id = 1
+currency-symbol = "ETH"
+priority-fee = 1.01
+max-fee-per-gas = 40.0
+gas-left-warning-limit = 1000000
+transaction-timeout = 100
+token = { address = "0x7DD9c5Cba05E151C895FDe1CF355C9A1D5DA6429", symbol = "GLM" }
+confirmation-blocks = 1
+block-explorer-url = "https://etherscan.io"
+
+[[chain.ethereum.rpc-endpoints]]
+name = "eth.llamarpc.com"
+endpoint = "https://eth.llamarpc.com"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "public.blastapi.io"
+endpoint = "https://eth-mainnet.public.blastapi.io"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "rpc.ankr.com/eth"
+endpoint = "https://rpc.ankr.com/eth"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "rpc.flashbots.net"
+endpoint = "https://rpc.flashbots.net"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "cloudflare-eth.com"
+endpoint = "https://cloudflare-eth.com/"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "ethereum.publicnode.com"
+endpoint = "https://ethereum.publicnode.com"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.ethereum.rpc-endpoints]]
+name = "chainstack"
+endpoint = "https://chainstack.com/"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+
+
 [chain.goerli]
 chain-name = "Goerli"
 chain-id = 5
-rpc-endpoints = [
-    "https://ethereum-goerli-rpc.allthatnode.com",
-    "https://rpc.slock.it/goerli",
-    "https://www.ethercluster.com/goerli",
-    "https://rpc.ankr.com/eth_goerli",
-]
 currency-symbol = "tETH"
-priority-fee = 0.01
+priority-fee = 0.000001
 max-fee-per-gas = 10.0
 gas-left-warning-limit = 1000000
-transaction-timeout = 60
+transaction-timeout = 100
 token = { address = "0x33af15c79d64b85ba14aaffaa4577949104b22e8", symbol = "tGLM" }
 multi-contract = { address = "0x7777784f803a7bf1d7f115f849d29ce5706da64a", max-at-once = 10 }
 faucet-client = { max-eth-allowed = 0.009, faucet-srv = "_eth-faucet._tcp", faucet-host = "faucet.testnet.golem.network", faucet-lookup-domain = "dev.golem.network", faucet-srv-port = 4001 }
 mint-contract = { address = "0xCCA41b09C1F50320bFB41BD6822BD0cdBDC7d85C", max-glm-allowed = 400 }
-confirmation-blocks = 1
+confirmation-blocks = 0
 block-explorer-url = "https://goerli.etherscan.io"
+
+[[chain.goerli.rpc-endpoints]]
+name = "eth-goerli.g.alchemy.com"
+endpoint = "https://eth-goerli.g.alchemy.com/v2/demo"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "eth-goerli.public.blastapi.io"
+endpoint = "https://eth-goerli.public.blastapi.io"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "eth-goerli.api.onfinality.io/public"
+endpoint = "https://eth-goerli.api.onfinality.io/public"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "rpc.goerli.mudit.blog"
+endpoint = "https://rpc.goerli.mudit.blog"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "endpoints.omniatech.io/v1/eth/goerli/public"
+endpoint = "https://endpoints.omniatech.io/v1/eth/goerli/public"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "rpc.goerli.eth.gateway.fm"
+endpoint = "https://rpc.goerli.eth.gateway.fm"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "goerli.blockpi.network/v1/rpc/public"
+endpoint = "https://goerli.blockpi.network/v1/rpc/public"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
+endpoint = "https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "rpc.ankr.com/eth_goerli"
+endpoint = "https://rpc.ankr.com/eth_goerli"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "ethereum-goerli-rpc.allthatnode.com"
+endpoint = "https://ethereum-goerli-rpc.allthatnode.com"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "rpc.slock.it/goerli"
+endpoint = "https://rpc.slock.it/goerli"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "www.ethercluster.com/goerli"
+endpoint = "https://www.ethercluster.com/goerli"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.goerli.rpc-endpoints]]
+name = "rpc.ankr.com/eth_goerli"
+endpoint = "https://rpc.ankr.com/eth_goerli"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[chain.holesky]
+chain-name = "Holesky"
+chain-id = 17000
+currency-symbol = "tETH"
+priority-fee = 0.000001
+max-fee-per-gas = 10.0
+gas-left-warning-limit = 1000000
+transaction-timeout = 100
+token = { address = "0x8888888815bf4DB87e57B609A50f938311EEd068", symbol = "tGLM" }
+multi-contract = { address = "0xAaAAAaA00E1841A63342db7188abA84BDeE236c7", max-at-once = 10 }
+mint-contract = { address = "0xFACe100969FF47EB58d2CF603321B581A84bcEaC", max-glm-allowed = 400 }
+faucet-client = { max-eth-allowed = 0.009, faucet-srv = "_eth-faucet._tcp", faucet-host = "faucet.testnet.golem.network", faucet-lookup-domain = "dev.golem.network", faucet-srv-port = 4002 }
+confirmation-blocks = 0
+block-explorer-url = "https://holesky.etherscan.io"
+
+
+
+[[chain.holesky.rpc-endpoints]]
+name = "holesky.publicnode.com"
+endpoint = "https://ethereum-holesky.publicnode.com"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "1rpc.io/holesky"
+endpoint = "https://1rpc.io/holesky"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "rpc.ankr.com/eth_holesky"
+endpoint = "https://rpc.ankr.com/eth_holesky"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "holesky.public.blastapi.io"
+endpoint = "https://eth-holesky.public.blastapi.io"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "holesky.drpc.org"
+endpoint = "https://holesky.drpc.org"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "gateway.tenderly.co"
+endpoint = "https://holesky.gateway.tenderly.co"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+[[chain.holesky.rpc-endpoints]]
+name = "holesky.rpc.thirdweb.com"
+endpoint = "https://holesky.rpc.thirdweb.com"
+priority = 0
+max-timeout-ms = 5000
+verify-interval-secs = 60
+allowed-head-behind-secs = 120
+
+
 
 [chain.mumbai]
 chain-name = "Mumbai testnet"
 chain-id = 80001
-rpc-endpoints = [
-    "https://rpc-mumbai.maticvigil.com/v1/fd04db1066cae0f44d3461ae6d6a7cbbdd46e4a5",
-]
-# rpc-endpoints = ["http://127.0.0.1:8545"]
 currency-symbol = "tMATIC"
-priority-fee = 1.01
-max-fee-per-gas = 300.0
+priority-fee = 1.0
+max-fee-per-gas = 14.0
 gas-left-warning-limit = 1000000
 transaction-timeout = 60
 token = { address = "0x2036807B0B3aaf5b1858EE822D0e111fDdac7018", symbol = "tGLM" }
@@ -67,16 +306,145 @@ multi-contract = { address = "0x800010D7d0d315DCA795110ecCf0127cBd76b89f", max-a
 confirmation-blocks = 1
 block-explorer-url = "https://mumbai.polygonscan.com"
 
+[[chain.mumbai.rpc-endpoints]]
+name = "g.alchemy.com/v2/demo"
+endpoint = "https://polygon-mumbai.g.alchemy.com/v2/demo"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "blockpi.network/v1/rpc/public"
+endpoint = "https://polygon-mumbai.blockpi.network/v1/rpc/public"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "public.blastapi.io/public"
+endpoint = "https://polygon-testnet.public.blastapi.io"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "omniatech.io/mumbai/public"
+endpoint = "https://endpoints.omniatech.io/v1/matic/mumbai/public"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "maticvigil.com/public"
+endpoint = "https://rpc-mumbai.maticvigil.com"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "terminet.io/public"
+endpoint = "https://polygontestapi.terminet.io/rpc"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "chainstacklabs.com/public"
+endpoint = "https://matic-mumbai.chainstacklabs.com"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "archive-rpc.bwarelabs/public"
+endpoint = "https://matic-testnet-archive-rpc.bwarelabs.com"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "rpc.ankr.com/public"
+endpoint = "https://rpc.ankr.com/polygon_mumbai"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "lavanet.xyz"
+endpoint = "https://g.w.lavanet.xyz:443/gateway/polygon1t/rpc-http/f7ee0000000000000000000000000000"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 60
+
+[[chain.mumbai.rpc-endpoints]]
+name = "archive.allthatnode.com"
+endpoint = "https://polygon-testnet-archive.allthatnode.com:8545"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.mumbai.rpc-endpoints]]
+name = "rpc.allthatnode.com"
+endpoint = "https://polygon-testnet-rpc.allthatnode.com:8545"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+
 [chain.polygon]
 chain-name = "Polygon mainnet"
 chain-id = 137
-rpc-endpoints = ["https://polygon-rpc.com"]
 currency-symbol = "MATIC"
 priority-fee = 30.111
 max-fee-per-gas = 500.0
 gas-left-warning-limit = 1000000
-transaction-timeout = 120
+transaction-timeout = 100
 token = { address = "0x0B220b82F3eA3B7F6d9A1D8ab58930C064A2b5Bf", symbol = "GLM" }
 # multi-contract = { address = "0x50100d4faf5f3b09987dea36dc2eddd57a3e561b", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://polygonscan.com"
+
+[[chain.polygon.rpc-endpoints]]
+name = "polygon-rpc.com"
+endpoint = "https://polygon-rpc.com"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.polygon.rpc-endpoints]]
+name = "maticvigil.com"
+endpoint = "https://rpc-mainnet.maticvigil.com"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.polygon.rpc-endpoints]]
+name = "quiknode.pro"
+endpoint = "https://rpc-mainnet.matic.quiknode.pro"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.polygon.rpc-endpoints]]
+name = "golem.network"
+endpoint = "https://bor.golem.network"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.polygon.rpc-endpoints]]
+name = "allthatnode.com-archive"
+endpoint = "https://polygon-mainnet-archive.allthatnode.com:8545"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+[[chain.polygon.rpc-endpoints]]
+name = "allthatnode.com-norm"
+endpoint = "https://polygon-mainnet-rpc.allthatnode.com:8545"
+priority = 0
+max-timeout-ms = 5000
+allowed-head-behind-secs = 120
+
+
+
