--- a/.env-template
+++ b/.env-template
@@ -50,6 +50,7 @@ YAGNA_DATADIR="."
 ## Setting any of these variables will disable DNS lookup mechanism and use custom list of nodes instead for chosen network.
 #MAINNET_GETH_ADDR=https://geth.golem.network:55555
 #GOERLI_GETH_ADDR=https://rpc.ankr.com/eth_goerli
+#HOLESKY_GETH_ADDR=https://rpc.ankr.com/eth_holesky
 #POLYGON_GETH_ADDR=https://bor.golem.network,https://polygon-rpc.com
 #MUMBAI_GETH_ADDR=https://matic-mumbai.chainstacklabs.com
 
