--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -10,6 +10,7 @@ ya-client-model = "0.5"
 ya-core-model = { version = "^0.9" }
 ya-service-bus = "0.6.1"
 ya-utils-path = "0.1"
+ya-utils-futures = "0.3"
 gftp = { version = "^0.3" }
 
 actix-http = "3"
