--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,8 +62,8 @@ ya-version = "0.2"
 ya-vpn = "0.2"
 ya-client = "0.7.1"
 ya-client-model = "0.5"
+gftp = { workspace = true, optional = true }
 
-gftp = { version = "0.3.1", optional = true }      # just to enable gftp build for cargo-deb
 ya-provider = { version = "0.3", optional = true } # just to enable conditionally running some tests
 
 actix-rt = "2.7"
@@ -225,6 +225,7 @@ libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
 
 ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3763496ccacb0709f6e2863b9efb3fbf6e97cb8c" }
+gftp = { version = "0.4.0", path="core/gftp" }      # just to enable gftp build for cargo-deb
 
 
 [patch.crates-io]
