--- a/utils/transfer/Cargo.toml
+++ b/utils/transfer/Cargo.toml
@@ -10,7 +10,7 @@ ya-client-model = "0.5"
 ya-core-model = { version = "^0.9" }
 ya-service-bus = "0.6.1"
 ya-utils-path = "0.1"
-gftp = { version = "^0.3" }
+gftp = { workspace = true }
 
 actix-http = "3"
 actix-web = "4"
