--- a/Cargo.toml
+++ b/Cargo.toml
@@ -225,8 +225,8 @@ libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
 
 ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3763496ccacb0709f6e2863b9efb3fbf6e97cb8c" }
-gftp = { version = "0.4.0", path="core/gftp" }      # just to enable gftp build for cargo-deb
-
+gftp = { version = "0.4.0", path="core/gftp" }
+ya-agreement-utils = { version = "0.6", path="utils/agreement-utils" }
 
 [patch.crates-io]
 ## SERVICES
