--- a/core/market/resolver/Cargo.toml
+++ b/core/market/resolver/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
 [dependencies]
-ya-agreement-utils = "0.5.0"
+ya-agreement-utils = { workspace = true }
 
 asnom = { git = "https://github.com/golemfactory/asnom" }
 bigdecimal = "0.2"
