--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 default = []
 
 [dependencies]
-ya-agreement-utils = { version = "0.5.0" }
+ya-agreement-utils = { workspace = true }
 ya-client-model = { version = "0.5", features = ["with-diesel"] }
 ya-core-model = { version = "^0.9", features = [ "activity", "driver", "identity", "market", "payment" ] }
 ya-net = "0.3"
