fix ya-agreement-utils version for provider

--- a/core/metrics/Cargo.toml
+++ b/core/metrics/Cargo.toml
@@ -24,7 +24,7 @@ lazy_static = "1.4"
 log = "0.4"
 metrics = "0.16"
 metrics-core = "0.5.2"
-metrics-runtime = "0.13.1"
+metrics-runtime = { version = "0.13.1", default-features = false, features = ["observers"] }
 percent-encoding = "2.1.0"
 structopt = "0.3"
 tokio = { version = "1", features = ["time", "sync"] }
