--- a/utils/manifest-utils/Cargo.toml
+++ b/utils/manifest-utils/Cargo.toml
@@ -20,7 +20,7 @@ bench = false
 schema = ["schemars"]
 
 [dependencies]
-ya-agreement-utils = "0.4.1"
+ya-agreement-utils = { workspace = true }
 ya-utils-path = "0.1"
 ya-client-model = "0.5"
 golem-certificate = "0.1.1"
