--- a/utils/manifest-utils/test-utils/Cargo.toml
+++ b/utils/manifest-utils/test-utils/Cargo.toml
@@ -14,4 +14,4 @@ tar = "0.4"
 openssl = "0.10"
 
 ya-manifest-utils = "0.2"
-ya-agreement-utils = "0.4.1"
+ya-agreement-utils = { workspace = true }
