--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -43,7 +43,7 @@ humantime = "2"
 lazy_static = "1.4"
 libsqlite3-sys = { workspace = true }
 log = "0.4"
-metrics="0.12"
+metrics = "0.12"
 num-derive = "0.3"
 num-traits = "0.2"
 r2d2 = "0.8"
@@ -62,6 +62,8 @@ uuid = { version = "0.8", features = ["v4"] }
 [dev-dependencies]
 all_asserts = "2.2.0"
 serde_json = "1.0"
-serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
+serial_test = { git = "https://github.com/golemfactory/serial_test.git", branch = "actix_rt_test", features = [
+    "actix-rt2",
+] }
 structopt = "0.3"
 tokio = { version = "1", features = ["macros", "rt"] }
