--- a/test-utils/test-framework/Cargo.toml
+++ b/test-utils/test-framework/Cargo.toml
@@ -11,7 +11,9 @@ assert_cmd = "2.0"
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
-serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
+serial_test = { git = "https://github.com/golemfactory/serial_test.git", branch = "actix_rt_test", features = [
+    "actix-rt2",
+] }
 tokio = { version = "1", features = ["rt"] }
 url = "2.3"
 
@@ -19,5 +21,5 @@ ya-utils-process = "0.2"
 ya-framework-macro = "0.1"
 
 [target.'cfg(target_family = "unix")'.dependencies]
-libc="0.2.73"
-nix="0.22.0"
+libc = "0.2.73"
+nix = "0.22.0"
