--- a/core/net/Cargo.toml
+++ b/core/net/Cargo.toml
@@ -18,7 +18,7 @@ packet-trace-enable = [
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.9", features = ["net", "identity"] }
 
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "3763496ccacb0709f6e2863b9efb3fbf6e97cb8c" }
+ya-relay-client = { workspace = true }
 #ya-relay-client = "0.6"
 #ya-relay-client = { path = "../../../ya-relay/client" }
 
