Update checkout to version 4

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -33,11 +33,11 @@ jobs:
     strategy:
       matrix:
         # TODO: switch back from `yagna-builder` to `ubuntu-latest` after update `ya-relay-stack` to same version as `ya-relay-client`
-        os: [macos-latest, windows-latest, yagna-builder]
+        os: [macos-latest, windows-latest, ubuntu-builder]
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
