back to ubuntu-latest in test

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -32,8 +32,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # TODO: switch back from `yagna-builder` to `ubuntu-latest` after update `ya-relay-stack` to same version as `ya-relay-client`
-        os: [macos-latest, windows-latest, yagna-builder]
+        os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
       - name: Checkout
