--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -24,13 +24,13 @@ readme = "README.md"
 # secondary = true
 
 [tool.poetry.dependencies]
-python = "^3.10.1"
+python = "^3.10.1,<3.11"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
 goth = "0.15.11"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "18ceed2e903fb9eb0e2dce46b924c83c93211abc" }
+# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "4ac27b3133b5c593df3ea9c008e4f476ae9697b5" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
