--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -28,9 +28,9 @@ python = "^3.10.1,<3.11"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.11"
+# goth = "0.15.11"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "4ac27b3133b5c593df3ea9c008e4f476ae9697b5" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d7df17db5e936db91ef9682136dadca222b064d5" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
