--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
 metrics = "0.12"
+num_cpus = "1"
 openssl = "0.10"
 openssl-probe = { version = "0.1", optional = true }
 serde = "1.0"
@@ -229,9 +230,9 @@ members = [
 # diesel 1.4.* supports up to 0.23.0, but sqlx 0.5.9 requires 0.22.0
 # sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
 libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
-erc20_payment_lib = { version = "0.3.2", git = "https://github.com/golemfactory/erc20_payment_lib", rev = "968a45e8852f065db0b4c27d7314d171da6ebcb2" }
+#erc20_payment_lib = { version = "0.3.2", git = "https://github.com/golemfactory/erc20_payment_lib", rev = "2fb9949b43ccedf0dfad61926d567debd2d6086f" }
 #erc20_payment_lib = { path = "../../payments/erc20_payment_lib/crates/erc20_payment_lib" }
-#erc20_payment_lib = { version = "=0.3.11" }
+erc20_payment_lib = { version = "=0.3.13" }
 rand = "0.8.5"
 url = "2.3.1"
 trust-dns-resolver = "0.22"
