--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
             catch(e) {
               let body = ["By installing & running this software you declare that you have read",
                 "understood and hereby accept the disclaimer and",
-                "privacy warning found at https://handbook.golem.network/see-also/terms"].join("\n");
+                "privacy warning found at https://docs.golem.network/docs/golem/terms"].join("\n");
 
               let release =  await github.request("POST /repos/:owner/:repo/releases", {
                 owner: context.repo.owner,
