--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "Framework :: AsyncIO",
 ]
 repository = "https://github.com/golemfactory/yagna"
-documentation = "https://handbook.golem.network"
+documentation = "https://docs.golem.network"
 readme = "README.md"
 
 # Uncomment to enable pulling packages from test.pypi.org
