--- a/Cargo.toml
+++ b/Cargo.toml
@@ -230,8 +230,8 @@ members = [
 # sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
 libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 #erc20_payment_lib = { version = "0.3.2", git = "https://github.com/golemfactory/erc20_payment_lib", rev = "2fb9949b43ccedf0dfad61926d567debd2d6086f" }
-erc20_payment_lib = { path = "../../payments/erc20_payment_lib/crates/erc20_payment_lib" }
-#erc20_payment_lib = { version = "=0.3.13" }
+#erc20_payment_lib = { path = "../../payments/erc20_payment_lib/crates/erc20_payment_lib" }
+erc20_payment_lib = { version = "=0.3.14" }
 rand = "0.8.5"
 url = "2.3.1"
 trust-dns-resolver = "0.22"
